Add grouped path tests